# we-meet_AI_review

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  docker-compose.dev.yml  이어서진행.md
backend/: pyproject.toml  selectors.yaml
backend/app/: config.py  db.py  deps.py  main.py  models.py  worker.py
backend/app/collectors/: base.py  csv_import.py  naver.py
backend/app/llm/: client.py  schemas.py
backend/app/notify/: dispatch.py  kakao.py  webpush.py
backend/app/pipeline/: analyze.py  embed.py  reply_gen.py  report_gen.py  stats.py
backend/app/routers/: assistant.py  auth.py  compare.py  dashboard.py  internal.py  replies.py  reports.py  reviews.py  stores.py
backend/app/schemas/: assistant.py  auth.py  compare.py  dashboard.py  internal.py  replies.py  reports.py  reviews.py  stores.py
backend/app/services/: assistant_queries.py  compare.py  dashboard.py  ingest.py  score.py
backend/migrations/: 000_dev_auth_stub.sql  001_init.sql  002_crawl_jobs_collected.sql  003_review_analysis_alerted_at.sql
backend/prompts/: assistant_answer_v1.md  assistant_router_v1.md  classify_v1.md  reply_v1.md  report_v1.md
backend/scripts/: seed_demo.py  smoke_llm.py
backend/tests/: conftest.py  test_assistant.py  test_auth.py  test_collectors.py  test_compare.py  test_dashboard.py  test_llm.py  test_models.py  test_naver.py  test_notify.py  test_pipeline.py  test_replies_api.py  test_reports.py  test_stores_api.py  test_worker.py
docs/: ARCHITECTURE.md  BACKEND.md  FRONTEND.md  TASKS.md  TECH_SPEC.md  schema.sql
frontend/: .env.local.example  .gitignore  (+3 more)
(+44 files in other folders)
